--- a/_includes/default.html
+++ b/_includes/default.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="{{ site.lang }}">
+<html lang="{{ site.locale }}">
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -22,7 +22,7 @@
       <div class="inner">
         <header>
           <a name="top"></a>
-          <h1>{{ page.title }}</h1>
+          <h1>{{ site.title }}</h1>
         </header>
         <section id="main_content">{{ content }}</section>
 
