--- a/_includes/default.html
+++ b/_includes/default.html
@@ -29,6 +29,7 @@
         <footer>
           <a href="/">Home</a> | <a href="/datenschutz">Datenschutz</a> |
           <a href="/impressum">Impressum</a>.
+          | version (replit)
         </footer>
       </div>
     </div>
